# DSMACC

./: .gitignore  CRI_subset.kpp  DATAE1  DATAJ1  DATAS1  INSTALL.md  Makefile  Makefile.defs  Makefile.defs.in  Makefile.in  README.md  README.rst  configure  configure.ac  constants.f90  driver.f90  dsmacc.kpp  fastjx.inc  global.inc  install.sh  photolysis.inc  plot.py  rate.inc  sfmakedepend  usrinp  util.inc
ISOROPIA/: Makefile  isoropiaIIcode.F  isoropia_dsmacc.F90
UCI_fastJX72e/: JX70  JX72_notes.txt  JX72e_notes.txt  Makefile  Makefile.in  README_makefile.txt  cld_sub_mod.F90  cmn_fjx_mod.F90  dsmacc_test.F90.bkp  fjx72.F90.bkp  fjx_dsmacc.F90  fjx_init_mod.F90  fjx_sub_mod.F90
acp/: Makefile  README  acp.kpp
cri/: CRI_subset.kpp  Makefile  README  cri.kpp
cri_tuv/: CRI_subset.kpp  Makefile  README  cri.kpp
data/: photolysis.txt
geoschem/: Makefile  README  gckpp.kpp  geoschem.inc  tropchem.eqn  tropchem.kpp  tropchem.spc  ucx.eqn  ucx.kpp  ucx.spc
kpp/: Makefile  Makefile.defs  Makefile.in  cflags  cflags.guess  setcase
kpp/drv/: general.f90
kpp/examples/: saprc_f90.kpp
kpp/int/: kpp_lsode.f90  rosenbrock.f90  rosenbrock_adj.f90  rosenbrock_tlm.f90  sdirk_adj.f90
kpp/models/: GEOSFunctions.inc  RateFunctions.inc  cbm4.def  cmaq.def  geos_chem.def  geos_chem.eqn  geos_chem.spc  geoschem-08-02-03.def  geoschem-08-02-03.eqn  geoschem-09-02.def  geoschem-09-02.eqn  geoschem-09-02.spc  mz4.def  mz4.eqn  mz4.spc  mz4Functions.inc  saprc99old.def  saprcnov.eqn
kpp/src/: .swn  .swo  .swp  Makefile  Makefile.in  code.h  code_f90.c  code_matlab.c  gdata.h  gen.c  lex.yy.c  scan.h  scan.l  scan.y  scanner.c  scanutil.c  y.tab.c  y.tab.h
kpp/util/: Makefile.f90  UserRateLaws.f90  util.f90
pysrc/: Makefile  Makefile.in  README.md  box.py  boxiso.py  cri_mcmj.kpp  driver.py  isoropia.pyf  kpp.pyf.tmp  makekpp_pyf.py  plot.py  pyglob.f90  pyint.f90  pymon.f90  pyparam.f90  pyrate.f90  ratesens.py  setup.py  trajectory.py
pysrc/lib/dsmacc/: __init__.py  __main__.py  _core.py  envutil.py  isoropia.py
src/: Makefile  Makefile.in  constants.f90  fastjx.inc  fflags.guess  global.inc  io.inc  kpp_constants.f90  mcm.inc  mcmj.inc  mcmtuv.inc  theta.inc  tuv.inc
test/: DATABHH  DATAE1  DATAJ1  DATAS1  Init_cons.dat.diurnal  Init_cons.dat.timeseries  Makefile  Rate_1.dat.check  Rate_1.dat.diurnal.check  Rate_1.dat.timeseries.check  Spec_1.dat.check  Spec_1.dat.diurnal.check  Spec_1.dat.timeseries.check  check.cri.Rate_1.dat.diurnal  check.cri.Spec_1.dat.diurnal  check.cri.Spec_1.dat.timeseries  check.geos.Rate_1.dat.diurnal  check.geos.Rate_1.dat.timeseries  check.geos.Spec_1.dat.diurnal  check.geos.Spec_1.dat.timeseries  check.mz4.Rate_1.dat.diurnal  check.mz4.Rate_1.dat.timeseries  check.mz4.Spec_1.dat.diurnal  check.mz4.Spec_1.dat.timeseries  check.py  cri.Init_cons.dat.diurnal  cri.Init_cons.dat.timeseries  cri.kpp  geos.Init_cons.dat.diurnal  geos.Init_cons.dat.timeseries  geos.kpp  geoschem-09-02.Init_cons.dat.timeseries  geoschem-09-02.kpp  mz4.Init_cons.dat.diurnal  mz4.Init_cons.dat.timeseries  mz4.kpp  usrinp
test/INPUTS/: usrinp
tuv_new/: Makefile  Makefile.in  README.txt  TUV.f  VERSION_NOTES.txt  functs.f  grids.f  helpin  la_srb.f  main.f90  numer.f  odo3.f  odrl.f  orbit.f  params  qys.f  rdetfl.f  rdinp.f  rdxs.f  rtrans.f  rxn.f  savout.f  setaer.f  setalb.f  setcld.f  setno2.f  seto2.f  setsnw.f  setso2.f  spectra.list  sphers.f  swbiol.f  swchem.f  swphys.f  usrinp  vpair.f  vpo3.f  vptmp.f  wshift.f
tuv_new/DATABHH/: CH3COOOH.j  NO3_IUPAC2006.abs
tuv_new/DATAE1/: wmo85
tuv_new/DATAE1/ATM/: ussa.dens  ussa.ozone  ussa.temp
tuv_new/DATAE1/GRIDS/: combined.grid  isaksen.grid
tuv_new/DATAE1/NO2/: NO2_IUPAC2003.abs
tuv_new/DATAE1/O2/: O2_brasseur.abs  O2_yoshino.abs
tuv_new/DATAE1/O3/: O3.molina.abs  O3_bass.abs
tuv_new/DATAE1/SO2/: SO2.abs
tuv_new/DATAE1/SUN/: atlas3.old  solstice.flx  solstice.flx.1  sunlean.flx  wmo85.flx
tuv_new/DATAJ1/ABS/: Acrolein.txt  Br2.abs  BrO.jpl03  CCl2O_jpl94.abs  CCl4_jpl94.abs  CClFO_jpl94.abs  CFC-115_jpl94.abs  CFC-11_jpl94.abs  CH3CCl3_jpl94.abs  CHBr3.abs  CLOOCL_jpl02.abs  H2O2_lin.abs  H2O_cantrell_1996.abs  H2O_jpl94.abs  HCFC-123_jpl94.abs  HCFC-141b_jpl94.abs  HCFC-142b_jpl94.abs  HCFC-225cb_jpl94.abs  HCFC-22_jpl94.abs  HCFCs_orl.abs  HNO2_bongartz94.abs  HNO2_jpl85.abs  HNO3_burk.abs  HNO4_jpl92.abs  HOCH2OOH.txt  Halon-1202_jpl97.abs  Halon-1301_jpl97.abs  Hydroxyacetone.abs  ICE_Perov.acff  ICE_min.acff  Martinez.abs  Methacrolein_jpl2007.txt  N2O5_jpl97.abs  NO3-_BJ92.abs  NO3_gj78.abs  NO3_jpl85.abs  PAN_senum.abs  PAN_talukdar.abs.notmp  PPN_Harwood.txt  Peracetic_acid.txt  (+2 more)
tuv_new/DATAJ1/C2H5CHO/: C2H5CHO_Chen01.yld
tuv_new/DATAJ1/C3H7CHO/: i_C3H7CHO_Chen.abs  i_C3H7CHO_Chen.yld  i_C3H7CHO_Martinez.abs
tuv_new/DATAJ1/C4H9CHO/: i_C4H9CHO_Zhu.abs  t_C4H9CHO_Zhu.yld
tuv_new/DATAJ1/C5H11CHO/: C5H11CHO_Plagens.abs  C5H11CHO_Tang.abs
tuv_new/DATAJ1/CH2O/: CH2O_can_lr.abs  CH2O_iupac.yld  CH2O_meller_moortgat_2006.abs  CH2O_nbs.abs  CH2O_ncar.abs  CH2O_rog.abs
tuv_new/DATAJ1/CH2OHCHO/: glycolaldehyde.abs
tuv_new/DATAJ1/CH3C(O)C3H5(CH3)2/: CH3C(O)C3H5(CH3)2_Yujing.abs
tuv_new/DATAJ1/CH3CHO/: CH3CHO_iup.abs  CH3CHO_iup.yld  (+3 more)
tuv_new/DATAS1/: dna.setlow.new  eppley_uv  nmsc_cie.txt  phaeo.bio  rbm.501  vitamin_D.txt
tuv_new/INPUTS/: defin1  defin2  defin3  defin4  usrinp
tuv_new/SAMPLE/: README  tuvlog1  tuvlog2  tuvlog3  tuvlog4  usrout1  usrout2  usrout3  usrout4
tuv_old/: Makefile  ReadMe.txt  arr1  arr2  defin1  defin2  defin3  defin4  foil.for  functs.f  grids.f  helpin  la_srb.f  numer.f  odo3.f  odrl.f  orbit.f  params  pppack_d.f  rdetfl.f  rdinp.f  rdxs.f  rtrans.f  rxn.f  savout.f  setaer.f  setalb.f  setcld.f  setno2.f  seto2.f  setso2.f  sphers.f  swbiol.f  swbiol2.f  swbiol3.f  swchem.f  swphys.f  tuv.f  usrinp  vpair.f  (+3 more)
tuv_old/DATAE1/: foil_bloss.tra
tuv_old/DATAS1/: SCUP-h  acgih.1992  cataract_oriowo  ery.anders  ery.anders~  proro.bio
working/: Init_cons.dat.diurnal  Init_cons.dat.timeseries  Makefile  check.py  dsmacc.kpp  mcm_subset.kpp
(+141 files in other folders)
